--- a/contacto.html
+++ b/contacto.html
@@ -31,19 +31,19 @@
         <div class="error" id="mensajeError"></div>
 
         <label for="nombre">Nombre</label><br>
-        <input type="text" id="nombre" name="nombre" class="form-input" required><br>
+        <input type="text" id="nombre" name="nombre" class="form-input" ><br>
 
         <label for="apellido">Apellido</label><br>
-        <input type="text" id="apellido" name="apellido" class="form-input" required><br>
+        <input type="text" id="apellido" name="apellido" class="form-input" ><br>
 
         <label for="asunto">Asunto</label><br>
-        <input type="text" id="asunto" name="asunto" class="form-input" required><br>
+        <input type="text" id="asunto" name="asunto" class="form-input"><br>
 
         <label for="email">Email</label><br>
-        <input type="email" id="email" name="email" class="form-input" required><br>
+        <input type="email" id="email" name="email" class="form-input" ><br>
 
         <label for="mensaje">Mensaje</label><br>
-        <textarea id="mensaje" name="mensaje" class="form-input" required></textarea><br>
+        <textarea id="mensaje" name="mensaje" class="form-input" ></textarea><br>
 
         <button type="submit" class="form-input">Enviar</button>
 
