--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,7 @@
         <input type="text" id="asunto" name="asunto" class="form-input"><br>
 
         <label for="email">Email</label><br>
-        <input type="email" id="email" name="email" class="form-input" ><br>
+        <input type="text" id="email" name="email" class="form-input" ><br>
 
         <label for="mensaje">Mensaje</label><br>
         <textarea id="mensaje" name="mensaje" class="form-input" ></textarea><br>
