--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
                 <li><a href="materias2025.html">Materias de 2025</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
+            <div>
+                <div id="themeToggle" style="cursor: pointer;">
+          <img id="icon-luna" src="./media/luna color.png" alt="Modo oscuro" width="35" height="35" />
+          <img id="icon-sol" src="./media/sol brillante.png" alt="Modo claro" width="35" height="35" style="display: none;" />
+        </div>
+            </div>
         </nav>
     </div>
     <header>
