--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
     </div>        
     
     <footer class="footer">Derechos reservados</footer>
-
+<script src="formjs.js"></script>
 </body>
 </html>
