--- a/Diseño y desarrollo web.html
+++ b/Diseño y desarrollo web.html
@@ -15,6 +15,9 @@
                 <li><a href="materias2025.html">Materias de 2025</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
+            <div class="theme-buttons">
+            <button id="toggleModeBtn">Cambiar modo</button>
+            </div>
         </nav>
     </div>
     <div class="contenedor">
@@ -56,6 +59,6 @@
             <p> Curso: 518378 / Profesora: Patricia Litovicius</p>
         </footer>
     </div>
-    
+    <script src="formjs.js"></script>
 </body>
 </html>
