--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
 
 <body class="color">
     <div class="menu">
-        <nav >
+        <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="sobremi.html">sobre mi</a></li> 
+                <li><a href="sobremi.html">sobremi</a></li> 
                 <li><a href="avisos.html">Avisos</a></li>
                 <li><a href="materias2025.html">Materias de 2025</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
             <div class="theme-buttons">
-                <button id="lightModeBtn">Modo Claro</button>
-                <button id="darkModeBtn">Modo Oscuro</button>
+            <button id="toggleModeBtn">Cambiar modo</button>
             </div>
-        
-            
         </nav>
     </div>
     <header>
