--- a/materias2025.html
+++ b/materias2025.html
@@ -10,7 +10,7 @@
 
 <body class="color">
     <div class="menu">
-        <nav >
+        <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobremi.html">sobremi</a></li> 
@@ -18,6 +18,9 @@
                 <li><a href="materias2025.html">Materias de 2025</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
+            <div class="theme-buttons">
+            <button id="toggleModeBtn">Cambiar modo</button>
+            </div>
         </nav>
     </div>
    
@@ -44,5 +47,6 @@
     <footer class="footer">   
         <p> Derechos reservados</p>
     </footer>
+    <script src="formjs.js"></script>
 </body>
 </html>
