--- a/sobremi.html
+++ b/sobremi.html
@@ -8,7 +8,7 @@
 
 <body class="color">
     <div class="menu" >
-        <nav >
+       <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobremi.html">sobremi</a></li> 
@@ -16,6 +16,9 @@
                 <li><a href="materias2025.html">Materias de 2025</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
+            <div class="theme-buttons">
+            <button id="toggleModeBtn">Cambiar modo</button>
+            </div>
         </nav>
     </div>
    
@@ -42,6 +45,6 @@
      <footer class="footer">
         <p> Derechos reservados</p>
     </footer>  
-  
+  <script src="formjs.js"></script>
 </body>
 </html>
