--- a/sobremi.html
+++ b/sobremi.html
@@ -17,7 +17,7 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
             <div class="theme-buttons">
-            <button id="toggleModeBtn">Cambiar modo</button>
+            <center><button id="toggleModeBtn">Cambiar modo</button></center>
             </div>
         </nav>
     </div>
