--- a/index.html
+++ b/index.html
@@ -71,7 +71,19 @@
                 </tr>
             </table>
     </div>        
-    
+<script>
+    const toggleBtn = document.getElementById("toggleModeBtn");
+
+    toggleBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark-mode");
+
+        if (document.body.classList.contains("dark-mode")) {
+            toggleBtn.textContent = "Modo Claro";
+        } else {
+            toggleBtn.textContent = "Modo Oscuro";
+        }
+    });
+  </script>    
     <footer class="footer">Derechos reservados</footer>
 <script src="formjs.js"></script>
 </body>
