--- a/avisos.html
+++ b/avisos.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="color">
-    <div class="menu">
+    <div class="menu" >
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,6 +22,7 @@
             <button id="toggleModeBtn">Cambiar modo</button>
             </div>
         </nav>
+    </div>
     </div>
     <header>
         <h1 class="titulo1">Avisos</h1>
