--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
             <div class="theme-buttons">
-            <button id="toggleModeBtn">Cambiar modo</button>
+                <button id="lightModeBtn">Modo Claro</button>
+                <button id="darkModeBtn">Modo Oscuro</button>
             </div>
         </nav>
     </div>
