--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
             <div class="theme-buttons">
-                <button id="lightModeBtn">Modo Claro</button>
-                <button id="darkModeBtn">Modo Oscuro</button>
-            </div>
+        <button id="toggleThemeBtn">
+                <span id="iconLuna">🌙</span>
+                <span id="iconSol" style="display: none;">☀️</span>
+  </button>
+</div>
         </nav>
     </div>
     <header>
