--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
             <div class="theme-buttons">
-        <button id="toggleThemeBtn">
-                <span id="iconLuna">🌙</span>
-                <span id="iconSol" style="display: none;">☀️</span>
-  </button>
-</div>
+                <button id="toggleThemeBtn">Cambiar modo</button>
+            </div>
         </nav>
     </div>
     <header>
