--- a/Diseño y desarrollo web.html
+++ b/Diseño y desarrollo web.html
@@ -16,7 +16,7 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
             <div class="theme-buttons">
-            <button id="toggleModeBtn">Cambiar modo</button>
+                <button id="toggleThemeBtn">Cambiar modo</button>
             </div>
         </nav>
     </div>
