--- a/contacto.html
+++ b/contacto.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>contacto</title>
     <link rel="stylesheet" href="5css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body class="color">
+<body class="color claro">
     <div class="menu" >
         <nav>
             <ul>
