Update Diseño y desarrollo web.html

--- a/Diseño y desarrollo web.html
+++ b/Diseño y desarrollo web.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="5css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body class="color">
+<body class="color claro">
     <div class="menu" >
         <nav>
             <ul>
