Update Diseño y desarrollo web.html

--- a/Diseño y desarrollo web.html
+++ b/Diseño y desarrollo web.html
@@ -35,7 +35,12 @@
         <div class="derecho">
             <h2 class="titulo2">Actividades uva con todos mis gitpages:</h2>
             <ul class="lista">
-                <li><a href="https://franprivi.github.io/dise-oydesarrollo/">Link 1 a mi repositorio</a></li>
+
+                <li>
+                    <p>Uva 1: Ejercicio individual: HTML - Introducción 📝</p>
+                    <a href="https://franprivi.github.io/dise-oydesarrollo/">Link 1 a mi repositorio</a>
+                </li>
+
                 <li><a href="https://franprivi.github.io/chichilo/">Link 2 a mi repositorio</a></li>
                 <li><a href="https://franprivi.github.io/Informacion-de-la-materia/">Link 3 a mi repositorio</a></li>
                 <li><a href="https://franprivi.github.io/fotos/">Link 4 a mi repositorio</a></li>
