Update Diseño y desarrollo web.html

--- a/Diseño y desarrollo web.html
+++ b/Diseño y desarrollo web.html
@@ -35,18 +35,53 @@
         <div class="derecho">
             <h2 class="titulo2">Actividades uva con todos mis gitpages:</h2>
             <ul class="lista">
-
+                <h3 class="titulo3">Uva 1</h2>
                 <li>
-                    <p>Uva 1: Ejercicio individual: HTML - Introducción 📝</p>
-                    <a href="https://franprivi.github.io/dise-oydesarrollo/">Link 1 a mi repositorio</a>
+                    <p>Ejercicio individual: HTML - Introducción 📝 </p>
+                    <a href="https://github.com/franprivi/dise-oydesarrollo">Repositorio </a> <a href="https://franprivi.github.io/dise-oydesarrollo/">Pages</a>
                 </li>
+                <li>
+                    <p>Ejercicio individual: HTML - Etiquetas 📝</p>
+                    <a href="https://github.com/franprivi/Informacion-de-la-materia">Repositorio</a> <a href="https://franprivi.github.io/Informacion-de-la-materia/">Pages</a>
+                </li>
+                <h3 class="titulo3">Uva 2</h2>
+                <li>
+                    <p>Ejercicio individual: Formato de texto 📝</p>
+                    <a href="https://github.com/franprivi/starwars">Repositorio</a> <a href="https://franprivi.github.io/starwars/">Pages</a>
+                </li>
+                <li>
+                    <p>Ejercicio individual: Formato de cajas 📝</p>
+                    <a href="https://github.com/franprivi/gym">Repositorio</a> <a href="https://franprivi.github.io/gym/">Pages</a>
+                </li>
+                <li>
+                    <p>Ejercicio individual: Unidades de medida 📝</p>
+                    <a href="https://github.com/franprivi/chichilo">Repositorio</a> <a href="https://franprivi.github.io/chichilo/">Pages</a>
+                </li>
+                 <li>
+                    <p>Ejercicio individual: Grid y Flexbox 📝</p>
+                    <a href="https://github.com/franprivi/fotos">Repositorio</a> <a href="https://franprivi.github.io/fotos/">Pages</a>
+                </li>
+                <h3 class="titulo3">Uva 3</h3>
+                 <li>
+                    <p>Ejercicio individual: JavaScript 📝</p>
+                    <a href="https://github.com/franprivi/Bienvenida-a-java">Repositorio</a> <a href="https://franprivi.github.io/Bienvenida-a-java/ ">Pages</a>
+                </li>
+                 <li>
+                    <p>Ejercicio individual: Práctica Formulario Javascript sitio Individual personal obligatorio (realizado para el parcial) 📝</p>
+                    <a href="https://github.com/franprivi/Parcial">Repositorio</a> <a href="https://franprivi.github.io/Parcial/">Pages</a>
+                </li>
+                 <li>
+                    <p>Ejercicio individual: Modo claro y oscuro 📝</p>
+                    <a href="https://github.com/franprivi/Parcial">Repositorio</a> <a href="https://franprivi.github.io/Parcial/">Pages</a>
+                </li>
+                <h3 class="titulo3">Uva 4</h3>
+                 <li>
+                    <p>Ejercicio individual: Integración con GitHub 📝</p>
+                    <a href="https://github.com/franprivi/Chistes-UVA4">Repositorio</a> <a href="https://franprivi.github.io/Chistes-UVA4/">Pages</a> <a href="https://superb-panda-fd3d2b.netlify.app/">Netlify</a>
+ 
+ 
 
-                <li><a href="https://franprivi.github.io/chichilo/">Link 2 a mi repositorio</a></li>
-                <li><a href="https://franprivi.github.io/Informacion-de-la-materia/">Link 3 a mi repositorio</a></li>
-                <li><a href="https://franprivi.github.io/fotos/">Link 4 a mi repositorio</a></li>
-                <li><a href="https://franprivi.github.io/Uva2-obligatorio/">Link 5 a mi repositorio</a></li>
-                <li><a href="https://franprivi.github.io/starwars/">Link 6 a mi repositorio</a></li>
-                <li><a href="https://franprivi.github.io/desarrollo-web-5-paginas/">Link 7 a mi repositorio</a></li>
+                </li>
             </ul>
         </div>
         <div class="izquierdo1">
