Update Diseño y desarrollo web.html

--- a/Diseño y desarrollo web.html
+++ b/Diseño y desarrollo web.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ></html>
+<html lang="es">
 <head>
     <title>desarrolloweb</title>
     <link rel="stylesheet" href="5css.css">
