--- a/avisos.html
+++ b/avisos.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Información sobre las tareas pendientes.">
     <title>avisos</title>
     <link rel="stylesheet" href="5css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
