--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <title>Index</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Información de las materias cursadas en el primer cuatrimestre de 2025">
     <link rel="stylesheet" href="5css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
