--- a/materias2025.html
+++ b/materias2025.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Lista de las materias cursadas en el primer cuatrimestre de 2025 con link a la materia de Diseño y desarrollo web.">
     <title>materias 2025</title>
     <link rel="stylesheet" href="5css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +41,7 @@
                 </p>
             </li><br><br>
             <li>Arq. de las computadoras</li><br><br>
-            <li>Sistemas de informaicon 1</li><br><br>
+            <li>Sistemas de información 1</li><br><br>
             <li>Fundamentos de Informatica </li><br><br>
             <li>Marketing</li>   
         </ul>
