--- a/sobremi.html
+++ b/sobremi.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Información sobre Francisco Prividera, su experiencia laboral y estudios actuales.">
     <title>Sobre mi</title>
     <link rel="stylesheet" href="5css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
