--- a/Diseño y desarrollo web.html
+++ b/Diseño y desarrollo web.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <title>desarrolloweb</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Información de las fechas de exámenes y actividades de la materia Diseño y desarrollo web.">
     <link rel="stylesheet" href="5css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
