--- a/sobremi.html
+++ b/sobremi.html
@@ -19,7 +19,7 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
             <div class="theme-buttons">
-                <button id="toggleThemeBtn">Modo Oscuro</button>
+                <button id="toggleThemeBtn">Cambiar modo</button>
             </div>
         </nav>
     </div>
